# NovelAITranslator2Book

./: .dockerignore  .env.example  .gitattributes  .gitignore  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  CACHE_CLEANUP_AND_FOLDER_CONSOLIDATION.md  CLEANUP_TESTING_COMPLETION.md  DATA_OUTPUT_STRUCTURE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_OPTIMIZATION_PLAN.md  GETTING_STARTED.md  LICENSE  PHASE_1_COMPLETION.md  PHASE_2_COMPLETION.md  PHASE_3_COMPLETION.md  PHASE_4_OPERATIONS.md  PHASE_4_PLAN.md  PYTHON_COMMANDS.md  SESSION_EXPORT_2026-03-07.json  SPECS_COMPLETION.md  TUI_GUIDE.md  TUI_REVIEW_AND_CLEANUP.md  alembic.ini  novelaibook-ui.spec  project-tree.txt  pyproject.toml  pyrightconfig.json  readme.md  render.yaml  temp_syosetu_inspect.py  test_output.txt
.agents/prompts/: spec-completion.md
.codex/: hooks.json
.codex/rules/: 01-graphify.md  02-render.md  03-workflow.md
.github/agents/: agents-novelai.agent.md
.github/workflows/: build.yml  ci.yml  deploy.yml  managed-services-verification.yml  opencode.yml
backend/: alembic.ini
backend/alembic/: env.py
backend/sql/: ci_vanilla_postgres_auth_compat.sql  rls_policies.sql
backend/src/novelai_shared/: __init__.py  pyproject.toml
backend/tests/: __init__.py  conftest.py  test_activity_provider_errors.py  test_activity_router.py  test_adapter_plugin_system.py  test_admin_glossary_api.py  test_admin_novel_detail_api_optional.py  test_admin_taxonomy.py  test_admin_translation_api.py  test_advanced_caching.py  test_atomic_json_storage_recovery.py  test_auth.py  test_backup_restore_catalog_refresh.py  test_backup_retention.py  test_backup_service.py  test_catalog_projection_performance.py  test_catalog_service.py  test_chapter_parallelization.py  test_chapter_selection.py  test_checkpoint_manager.py  test_checkpoint_resume.py  test_ci_workflows.py  test_cli_entrypoints.py  test_cli_smoke_scripts.py  test_compare.py  test_cost_estimator_cli.py  test_cost_estimator_heuristics.py  test_crawl_fetch_observability.py  test_crawl_resilience_contracts.py  test_database_backup_crypto.py  test_db_engine.py  test_db_models_chapter.py  test_db_models_glossary.py  test_db_models_jobs.py  test_db_models_novel.py  test_db_models_user_system.py  test_document_import_orchestration.py  test_email_service.py  test_error_handling_logging.py  test_errors.py  (+106 more)
data/: translation_cache.json  usage.json
deploy/: .env.example  .env.production.example  Caddyfile  Caddyfile.example  admin.Dockerfile  backend.Dockerfile  cleanup.ps1  compose.dev.yml  compose.yml  frontend.Dockerfile  install-extensions.ps1  reader.Dockerfile
deploy/scripts/: deploy-smoke.ps1
docs/: DEBT.md  DEPLOYMENT_CHECKLIST.md  README.md  SPECS_COMPLETION.md  architecture.md  backend_god_file_debt.md  backend_layer_violation_debt.md  cicd-manual-setup.md  current_state.md  environment.md  frontend-design.md  jp-en-prompt-quality-policy.md  roadmap.md  storage-contract.md
docs/architecture/: ARCHITECTURE_REVIEW.md  FRONTEND_ARCHITECTURE.md  IMPLEMENTATION_AUDIT.md  POST_PROMPT_10_STATE.md  PRODUCTION_WEB_DEPLOYMENT.md  PROMPT_1_TO_10_SUMMARY.md  PUBLIC_CONTRIBUTION_READINESS.md  README.md  RELEASE_D_PLAN.md  SCHEDULER_READINESS.md  SECURITY_PROTECTION_PLAN.md  architecture.md  frontend-design.md  public-auth-contract.md
docs/archive/: backend_layer_violation_debt.md
docs/glossary/: glossary-system.md
docs/guides/: GETTING_STARTED.md  TUI_GUIDE.md
docs/history/: PHASE_2_COMPLETION.md  README.md
docs/operations/: data-recovery.md  deployment.md  implementation-prompt-template.md  m1-glossary-router-repair-prompt.md  m2-operational-safety-prompt.md  m3-deployment-readiness-prompt.md  managed-platform-audit-2026-07-16.md  runbook.md
docs/plans/: DOCUMENTATION_OPTIMIZATION_PLAN.md  codex_cleanup_prompt_pack.txt
docs/reference/: DATA_OUTPUT_STRUCTURE.md  PYTHON_COMMANDS.md  data-output-structure.md  python-commands.md
docs/reports/: CACHE_CLEANUP_AND_FOLDER_CONSOLIDATION.md  CLEANUP_AND_TESTING_SUMMARY.md  CLEANUP_TESTING_COMPLETION.md
docs/roadmap/: public-platform-expansion.md
docs/sources/: codex_project_rules_guardrails.txt
docs/sql/: rls_policies.sql
docs/translation/: glossary-approved-term-apply-plan.md  glossary-candidate-import-and-provider-plan.md  glossary-prompt-injection-plan.md  kakuyomu-16817330655991571532-glossary-seed-decisions.md  kakuyomu-16817330655991571532-term-consistency-audit.md  n2056dn-glossary-seed-decisions.md  n2056dn-term-consistency-audit.md
frontend/: .env.example  Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
frontend/hooks/: use-progress-ramp.ts  use-sortable-table.ts
frontend/lib/: activity.ts  admin-errors.ts  admin-nav.ts  api-types.ts  api.ts  date-group.ts  (+13 more)
novelai/: __init__.py  __main__.py
scripts/: docker-compose-dev.ps1  inspect_syosetu.py  run_gui_dev.py  update-lockfiles.ps1
src/: __init__.py  clean.py  fetch.py  models.py  parse.py  pipeline.py  segment.py  utils.py
storage/: README.md
tests/: conftest.py  test_adapters.py  test_backup_manager.py  test_chapter_state.py  test_checkpoint_manager.py  test_clean.py  test_cli_entrypoints.py  test_cli_smoke_scripts.py  test_compare.py  test_desktop_gui.py  test_document_import_orchestration.py  test_epub_exporter.py  test_estimator.py  test_glossary.py  test_integration.py  test_job_runner_service.py  test_job_worker_service.py  test_kakuyomu_source.py  test_markdown_exporter.py  test_novel18_source.py  test_novel_orchestration_service.py  test_novel_request_service.py  test_openai_provider.py  test_parse.py  test_phase4_integration.py  test_pipeline_stages.py  test_preferences_service.py  test_pricing.py  test_project_layout.py  test_prompts.py  test_query_builder.py  test_settings.py  test_source_helpers.py  test_storage_document_import.py  test_storage_service.py  test_syosetu_source.py  test_translation_cache.py  test_tui.py  test_usage_service.py  test_web_api.py
(+951 files in other folders)
