[build-system]
requires = ["setuptools>=82.0.0", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-ai"
version = "0.1.0"
description = "Web-based Japanese novel crawling, translation, editing, and reader platform."
authors = [
  {name = "ArchdukeViel"}
]
readme = "readme.md"
requires-python = ">=3.13"
license = {text = "GPL-3.0-or-later"}

dependencies = [
  "argon2-cffi>=25.1.0",
  "fastapi>=0.135.1",
  "uvicorn[standard]>=0.41.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "python-dotenv>=1.2.2",
  "httpx>=0.28.1",
  "beautifulsoup4>=4.14.3",
  "lxml>=6.0.2",
  "google-genai>=1.36.0",
]

[project.optional-dependencies]
openai = [
  "openai>=2.26.0",
]
gemini = [
  "google-genai>=1.36.0",
]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "aiosqlite>=0.20",
]
documents = [
  "pypdf>=5.4.0",
]
db = [
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
]
worker = [
  "rq>=1.16",
  "redis>=5.0",
]
auth = [
  "argon2-cffi>=25.1.0",
  "itsdangerous>=2.2",
]
dev = [
  "argon2-cffi>=25.1.0",
  "google-genai>=1.36.0",
  "openai>=2.26.0",
  "pip-tools>=7.5.3",
  "pyright[nodejs]>=1.1.408",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "rq>=1.16",
  "redis>=5.0",
  "fakeredis>=2.23",
]

[project.urls]
# homepage = "https://example.com"
# repository = "https://example.com/novel-ai"

[tool.setuptools.packages.find]
where = ["backend/src"]

[project.scripts]
novelaibook = "novelai.runtime.cli:main"
novelai = "novelai.__main__:main"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-p no:cacheprovider"
pythonpath = ["backend/src", "backend"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
tmp_path_retention_policy = "none"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "I",     # isort
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "SIM",   # flake8-simplify
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # mutable default arg (used intentionally in CLI helpers)
  "B023",   # loop variable binding
  "RUF001", # ambiguous unicode (intentional Japanese text in tests)
  "RUF012", # mutable class attribute (used in dataclass-style patterns)
  "SIM102", # nested if (readability preference)
  "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["novelai"]
