[build-system]
requires = ["setuptools>=82.0.0", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-ai"
version = "0.1.0"
description = "Web-based Japanese novel crawling, translation, editing, and reader platform."
authors = [
  {name = "ArchdukeViel"}
]
readme = "readme.md"
requires-python = ">=3.13"
license = {text = "GPL-3.0-or-later"}

dependencies = [
  "argon2-cffi>=25.1.0",
  "fastapi>=0.139.0",
  "uvicorn[standard]>=0.51.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "python-dotenv>=1.2.2",
  "httpx>=0.28.1",
  "beautifulsoup4>=4.15.0",
  "lxml>=6.1.1",
  "cryptography>=49.0.0",
  "croniter>=6.0.0",
  "google-genai>=2.11.0",
]

[project.optional-dependencies]
gemini = [
  "google-genai>=2.11.0",
]
test = [
  "httpx2>=2.7.0",
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "aiosqlite>=0.20",
  "hypothesis>=6.0",
  "moto[s3]>=5.0.0",
]
documents = [
  "pypdf>=6.14.2",
]
db = [
  "sqlalchemy>=2.0.51",
  "alembic>=1.18.5",
  "psycopg[binary]>=3.2",
]
worker = [
  "rq>=2.10.0",
  "redis>=8.0.1",
]
auth = [
  "argon2-cffi>=25.1.0",
  "itsdangerous>=2.2",
]
s3 = [
  "boto3>=1.43.47",
]
dev = [
  "aiosqlite>=0.20",
  "argon2-cffi>=25.1.0",
  "cryptography>=49.0.0",
  "croniter>=6.0.0",
  "google-genai>=2.11.0",
  "hypothesis>=6.0",
  "httpx2>=2.7.0",
  "itsdangerous>=2.2",
  "moto[s3]>=5.0.0",
  "pip-tools>=7.5.3",
  "pyright[nodejs]>=1.1.411",
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "ruff>=0.15.21",
  "sqlalchemy>=2.0.51",
  "alembic>=1.18.5",
  "psycopg[binary]>=3.2",
  "rq>=2.10.0",
  "redis>=8.0.1",
  "fakeredis>=2.36.2",
  "pre-commit>=4.2.0",
  "pyasn1>=0.6.4",
]

[project.urls]
# homepage = "https://example.com"
# repository = "https://example.com/novel-ai"

[tool.setuptools.packages.find]
where = ["backend/src"]

[project.scripts]
novelaibook = "novelai.runtime.cli:main"
novelai = "novelai.__main__:main"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-p no:cacheprovider"
pythonpath = ["backend/src", "backend"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
tmp_path_retention_policy = "none"
markers = [
    "e2e: end-to-end integration tests (full pipeline, slower, requires fixtures)",
    "integration: integration tests against external services (S3/R2, Redis, etc.)",
    "slow: tests that require database, network, or are particularly slow",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "I",     # isort
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "SIM",   # flake8-simplify
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # mutable default arg (used intentionally in CLI helpers)
  "B023",   # loop variable binding
  "RUF001", # ambiguous unicode (intentional Japanese text in tests)
  "RUF012", # mutable class attribute (used in dataclass-style patterns)
  "SIM102", # nested if (readability preference)
  "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["novelai"]
